sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: not found: value getNombreValeur
  for (i <- 1 to getNombreValeur()-1){
                 ^