sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var j=0
  for (i <- 1 to getNombreValeur()-1){
  	j=i+1
  	if (!plusPetit(i,j)){
      echange(i,j)
      
    }
  }
}